# cmake_opencv

./: CMakeLists.txt  config.h  config.h.in  main.cpp
